# kaolin

./: MANIFEST.in  pyproject.toml  setup.py
ci/gitlab_jenkins_templates/: ubuntu_cpuonly_CI.jenkins  ubuntu_custom_build_CI.jenkins
docs/notes/: installation.rst
tools/linux/: Dockerfile.install
tools/windows/: Dockerfile.install  Dockerfile.install_wheel
